--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,13 +45,14 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.picasso:picasso:2.0.0'
 
 
 }
