--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,18 +41,17 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.picasso:picasso:2.0.0'
+    implementation('com.github.ihsanbal:LoggingInterceptor:3.0.0') {
+        exclude group: 'org.json', module: 'json'
+    }
 
 
 }
